--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <script type="text/javascript" src="paper-full.js"></script>
 
     <script type="text/paperscript" canvas="myCanvas">
+    var circles = [];
+
     function onKeyDown(event) {
       var maxPoint = new Point(view.size.width, view.size.height);
       var randomPoint = Point.random();
       var point = maxPoint * randomPoint;
+      var newCircle = new Path.Circle(point, 500)
+      newCircle.fillColor = "orange";
+      circles.push(newCircle);
+    }
 
-
-
-      new Path.Circle(new Point(point, 100), 10).fillColor = "orange";
+    function onFrame(event){
+      for(var i = 0; i < circles.length; i++){
+        circles[i].fillColor.hue +=1;
+        circles[i].scale(.9);
+      }
     }
 
 
