--- a/index.html
+++ b/index.html
@@ -2,20 +2,138 @@
 <html>
   <head>
     <title>Patatat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="circles.css">
     <script type="text/javascript" src="paper-full.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.js"></script>
+
 
     <script type="text/paperscript" canvas="myCanvas">
+
+    var keyData = {
+      a: {
+        color: "purple",
+        sound: new Howl({
+          src: ['sounds/bubbles.mp3']
+        })
+      },
+      s: {
+        color: "pink",
+        sound: new Howl({
+          src: ['sounds/clay.mp3']
+        })
+      },
+      d: {
+        color: "blue",
+        sound: new Howl({
+          src: ['sounds/confetti.mp3']
+        })
+      },
+      f: {
+        color: "white",
+        sound: new Howl({
+          src: ['sounds/corona.mp3']
+        })
+      },
+      g: {
+        color: "#E57373",
+        sound: new Howl({
+          src: ['sounds/dotted-spiral.mp3']
+        })
+      },
+      h: {
+        color: "#F06292",
+        sound: new Howl({
+          src: ['sounds/flash-1.mp3']
+        })
+      },
+      j: {
+        color: "#4DD0E1",
+        sound: new Howl({
+          src: ['sounds/flash-2.mp3']
+        })
+      },
+      k: {
+        color: "#FFF176",
+        sound: new Howl({
+          src: ['sounds/flash-3.mp3']
+        })
+      },
+      l: {
+        color: "#FFB74D",
+        sound: new Howl({
+          src: ['sounds/glimmer.mp3']
+        })
+      },
+      q: {
+        color: "#AED581",
+        sound: new Howl({
+          src: ['sounds/moon.mp3']
+        })
+      },
+      w: {
+        color: "#DCE775",
+        sound: new Howl({
+          src: ['sounds/pinwheel.mp3']
+        })
+      },
+      e: {
+        color: "#81C784",
+        sound: new Howl({
+          src: ['sounds/piston-1.mp3']
+        })
+      },
+      r: {
+        color: "#7986CB",
+        sound: new Howl({
+          src: ['sounds/piston-2.mp3']
+        })
+      },
+      t: {
+        color: "#4FC3F7",
+        sound: new Howl({
+          src: ['sounds/piston-3.mp3']
+        })
+      },
+      y: {
+        color: "#E1F7D5",
+        sound: new Howl({
+          src: ['sounds/prism-1.mp3']
+        })
+      },
+      u: {
+        color: "#ffbdbd",
+        sound: new Howl({
+          src: ['sounds/prism-2.mp3']
+        })
+      },
+      i: {
+        color: "#c9c9ff",
+        sound: new Howl({
+          src: ['sounds/prism-3.mp3']
+        })
+      },
+      o: {
+        color: "#B9CC66",
+        sound: new Howl({
+          src: ['sounds/splits.mp3']
+        })
+      }
+    }
+
     var circles = [];
 
     function onKeyDown(event) {
+      if(keyData[event.key]){
       var maxPoint = new Point(view.size.width, view.size.height);
       var randomPoint = Point.random();
       var point = maxPoint * randomPoint;
       var newCircle = new Path.Circle(point, 500)
-      newCircle.fillColor = "orange";
+      newCircle.fillColor = keyData[event.key].color;
+      keyData[event.key].sound.play();
       circles.push(newCircle);
     }
+  }
 
     function onFrame(event){
       for(var i = 0; i < circles.length; i++){
